<resources>
    <string name="app_name">RemoteCoders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="payment">Payment</string>
    <string name="feed_your_pet">Feed your pet</string>
    <string name="care_your_pet">Care your pet</string>
    <string name="account">Account</string>
    <string name="string_account">Account</string>
    <string name="btn_pets">Pets</string>
    <string name="tv_dashboard">Dashboard</string>
    <string name="btn_foods">Foods</string>
    <string name="btn_ads">Advertisement</string>
    <string name="btn_dog">Dog</string>
    <string name="btn_cat">Cat</string>
    <string name="btn_rabbit">Rabbit</string>
    <string name="btn_food1">Add Food</string>
    <string name="btn_food2">View Food</string>
    <string name="btn_food3">Update Food</string>
    <string name="btn_food4">Delete Food</string>
    <string name="add_food">Add Food</string>
    <string name="food_category">Category</string>
    <string name="food_name">Name</string>
    <string name="food_price">Price</string>
    <string name="upload_image">Upload Image</string>
    <string name="food_description">Description</string>
    <string name="name">Name</string>
    <string name="view_food">View Food Items</string>
    <string name="food1">Chappi</string>
    <string name="update_food">Update Food Items</string>
    <string name="delete_food">Delete Food Items</string>
    <string name="food_name1">Chappi</string>
    <string name="food_price1">$32.30</string>
    <string name="food_type1">Chicken and rice</string>
    <string name="food_name2">Pedigree</string>
    <string name="food_price2">$35.30</string>
    <string name="food_type2">Grilled steak</string>
    <string name="food_name3">9Lives</string>
    <string name="food_price3">$20.30</string>
    <string name="food_type3">Daily Essentials</string>
    <string name="btn_add">Add</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="food_category1">Dog Foods</string>
    <string name="food_category2">Cat Foods</string>
    <string name="food_category3">Rabbit Foods</string>
    <string name="dog_food">Dog Foods</string>
    <string name="dog_food1">Cesar</string>
    <string name="dog_food2">Pedigree</string>
    <string name="dog_food3">Chappi</string>
    <string name="old_price">150</string>
    <string name="new_price">$50.30</string>
    <string name="food_details">Meaw mix Original combines fun shapes and crunchy bites.</string>
    <string name="food_flavour">Rostisserie chicken flavor</string>
    <string name="add_cart">Add to cart</string>
    <string name="back">back</string>
    <string name="one">1</string>
    <string name="pay_now">Pay Now</string>
    <string name="btn_petsitting">Pet Sitting</string>
    <string name="vet">Vet</string>
    <string name="province1">Western Province</string>
    <string name="province2">Eastern Province</string>
    <string name="province3">North Central Province</string>
    <string name="province4">North Western Province</string>
    <string name="province5">Northern Province</string>
    <string name="province6">Sabaragamuwa Province</string>
    <string name="province7">Southern Province</string>
    <string name="province8">Uwa Province</string>
    <string name="province9">Central Province</string>
    <string name="vet_1">Y.G.K.de Silva</string>
    <string name="vet_1_1">Colombo</string>
    <string name="vet2">W.U.C.Fernendo</string>
    <string name="vet2_2">Kottawa</string>
    <string name="vet3">H.S.Dasanayaka</string>
    <string name="vet3_3">Homagama</string>
    <string name="vet4">M.D.Perera</string>
    <string name="vet4_4">Boralesgamuwa</string>
    <string name="addvet">Add Vet</string>
    <string name="add">Add</string>
    <string name="location">Location</string>
    <string name="bio">Bio</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="office">Office</string>
    <string name="update_vet">Update Vet</string>
    <string name="update">Update</string>
    <string name="y_g_k_de_silva">Y.G.K.de Silva</string>
    <string name="colombo">Colombo</string>
    <string name="_255_1_kaldemulla_road_moratuwa">255/1, Kaldemulla Road, Moratuwa</string>
    <string name="external_liasion_manager_blue_paw_trust_30_42_london_place_colombo_07">External Liaison Manager Blue Paw Trust, 30/42, London Place, Colombo 07</string>
    <string name="bvsc_mba">BVSC,MBA</string>
    <string name="_0777349907">0777349907</string>
    <string name="delete">Delete</string>
    <string name="delete_vet">Delete Vet</string>
    <string name="view_vet">View Vet</string>
    <string name="dr_y_g_k_de_silva">Dr.Y.G.K.de Silva</string>
    <string name="pet_sitting">Pet Sitting</string>
    <string name="search">search hear</string>
    <string name="search2">search here</string>
    <string name="location_kaduwela">Location : kaduwela</string>
    <string name="kaduwela">Kaduwela</string>
    <string name="blue_cross_animal_care">Blue Cross Animal Care</string>
    <string name="location_dehiwala">Location : Dehiwala</string>
    <string name="dog_grooming_sri_lanka_pet_care_service">Dog Grooming Sri Lanka (Pet Care Service)</string>
    <string name="location_maharagama">Location: Maharagama</string>
    <string name="location_piliyandala">Location: Piliyandala</string>
    <string name="_463_29_nature_breeze_welivita_rd_kaduwela_10640">463/29 Nature Breeze, Welivita Rd, Kaduwela 10640</string>
    <string name="weekdays_open_8am_4pm_weekend_open_6am_8pm">Weekdays: Open 8AM - 4PM Weekend: Open 6AM - 8PM</string>
    <string name="family_pet_kennel_pet_boarding00">Family Pet Kennel (Pet Boarding )</string>
    <string name="add_pet_sitting">Add Pet Sitting</string>
    <string name="weekdays">Weekdays</string>
    <string name="weekends">Weekends</string>
    <string name="family_pet_kennel_pet_boarding0">Family Pet Kennel (Pet Boarding )</string>
    <string name="kaduwela0">Kaduwela</string>
    <string name="_463_29_nature_breeze_welivita_rd_kaduwela_106400">463/29 Nature Breeze, Welivita Rd, Kaduwela 10640</string>
    <string name="open_8am_4pm">Open 8AM - 4PM</string>
    <string name="_077_245_7833">077 245 7833</string>
    <string name="open_6am_8pm">Open 6AM - 8PM</string>
    <string name="_077_245_78330">- 077 245 7833</string>
    <string name="todo">TODO</string>
    <string name="family_pet_kennel_pet_boarding000">Family Pet Kennel (Pet Boarding )</string>
    <string name="delete_pet_sitting">Delete Pet Sitting</string>
    <string name="view_pet_sitting">View Pet Sitting</string>
    <string name="family_pet_kennel_pet_boarding">Family Pet Kennel (Pet Boarding )</string>
    <string name="crystal_kennels_dog_boarding">Crystal Kennels Dog Boarding</string>
    <string name="update_pet_sitting">Update Pet Sitting</string>
    <string name="viewdog">View Dog</string>
    <string name="dogade">Age</string>
    <string name="gendog">Gender</string>
    <string name="teldog">Tel</string>
    <string name="updog">Update Dog</string>
    <string name="namedog">Golden Retriever</string>
    <string name="ages">3 months</string>
    <string name="genderdog">Male</string>
    <string name="coldog">Color</string>
    <string name="dogcol">Light Dog</string>
    <string name="locdog">Location</string>
    <string name="addressdog">393/01,Boralesgamuwa</string>
    <string name="contactdog">0718456877</string>
    <string name="dogprice">Price</string>
    <string name="dogpri">$300.30</string>
    <string name="deldog">Delete Dog</string>
    <string name="items">3 items</string>
    <string name="cartp1">$32.30</string>
    <string name="cartm">1x</string>
    <string name="chappi">Chappi</string>
    <string name="food3">Chicken and Rice</string>
    <string name="dogname">Golden Retriever</string>
    <string name="addrssdog">Boralesgamuwa</string>
    <string name="cap2">$300.30</string>
    <string name="dashbrd">Dashboard</string>
    <string name="updatepet">Update Pet</string>
    <string name="viewpet">View Pet</string>
    <string name="dogadd">Add Dog</string>


    <string name="dg">Dog</string>
    <string name="ct">Cat</string>
    <string name="rab">Rabbit</string>


    <string name="user_name">User Name</string>
    <string name="register">REGISTER</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="new_password">New Password</string>
    <string name="mobile">Mobile</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="login_in">LOGIN IN</string>
    <string name="welcome_back">WELCOME BACK</string>
    <string name="btn_upload">Upload</string>
    <string name="btn_browse">Browse</string>
    <string name="img_url">Image Url</string>
    <string name="cart_x">x</string>
    <string name="cart">Cart</string>

</resources>