<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:backgroundTint="@color/dark_blue"
    tools:context=".CareActivity2">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#081C34"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="421dp"
        android:layout_height="53dp"
        android:background="@color/black"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="253dp"
        android:layout_height="31dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="36dp"
        android:background="@android:color/darker_gray"
        android:queryHint="@string/search"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintCircleRadius="20sp"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409"
        tools:targetApi="s" />

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551"
        app:srcCompat="@drawable/ic_baseline_menu_24"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/button5"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FBF197"
        android:text="@string/province5"
        android:textAllCaps="true"
        android:textColor="#212121"
        android:textSize="15sp"
        app:cornerRadius="?attr/listPreferredItemPaddingLeft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="#F3A9F8"
        android:backgroundTintMode="src_in"
        android:text="@string/province1"
        android:textAllCaps="true"
        android:textColor="#212121"
        android:textSize="15sp"
        app:cornerRadius="?attr/listPreferredItemPaddingLeft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:backgroundTint="#40FBEB"
        android:text="@string/province2"
        android:textAllCaps="true"
        android:textColor="#212121"
        android:textSize="15sp"
        app:cornerRadius="?attr/listPreferredItemPaddingLeft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/btn_Ads"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:backgroundTint="#AEF6AF"
        android:text="@string/province3"
        android:textAllCaps="true"
        android:textColor="#212121"
        android:textSize="15sp"
        app:cornerRadius="?attr/listPreferredItemPaddingLeft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button7"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:backgroundTint="#EDAF6C"
        android:text="@string/province6"
        android:textAllCaps="true"
        android:textColor="#212121"
        android:textSize="15sp"
        app:cornerRadius="?attr/listPreferredItemPaddingLeft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button8"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#EA689C"
        android:text="@string/province8"
        android:textAllCaps="true"
        android:textColor="#212121"
        android:textSize="15sp"
        app:cornerRadius="?attr/listPreferredItemPaddingLeft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button10"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#E6A376"
        android:text="@string/province9"
        android:textAllCaps="true"
        android:textColor="#212121"
        android:textSize="15sp"
        app:cornerRadius="?attr/listPreferredItemPaddingLeft"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        app:layout_constraintVertical_bias="0.028" />

    <Button
        android:id="@+id/button4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#BB78F6"
        android:text="@string/province4"
        android:textAllCaps="true"
        android:textColor="#212121"
        android:textSize="15sp"
        app:cornerRadius="?attr/listPreferredItemPaddingLeft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Ads" />

    <Button
        android:id="@+id/button6"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#88BCF4"
        android:text="@string/province7"
        android:textAllCaps="true"
        android:textColor="#212121"
        android:textSize="15sp"
        app:cornerRadius="?attr/listPreferredItemPaddingLeft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />


</androidx.constraintlayout.widget.ConstraintLayout>